force-app/main/default/objects/Retail_Supplier__c/Retail_Supplier__c.object-meta.xml
<CustomObject>
    <label>Retail Supplier</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Supplier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>