force-app/main/default/objects/Retail_Supplier__c/fields/Add_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Add Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Retail_Product__c.Retail_Product_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.Add_Product_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Suppliers</relationshipLabel>
    <relationshipName>Retail_Suppliers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>