force-app/main/default/objects/Retail_Supplier__c/fields/Country_code__c.field-meta.xml
<CustomField>
    <fullName>Country_code__c</fullName>
    <label>Country code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code</valueSetName>
    </valueSet>
</CustomField>