force-app/main/default/objects/Retail_Supplier__c/validationRules/Phone_Number_10_digit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_10_digit_validation</fullName>
    <active>true</active>
    <description>Phone number should be not more than 10 digit</description>
    <errorConditionFormula>NOT(REGEX( Phone_Number__c , &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number must be 10 digits long.</errorMessage>
</ValidationRule>