force-app/main/default/objects/Retail_Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Supplier_Code__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Website__c</columns>
    <columns>Address__CountryCode__s</columns>
    <columns>Add_Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>